fix Array of ControllingStations

--- a/CentralStation/src/main/resources/application.properties
+++ b/CentralStation/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.data.mongodb.password=root
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=centraldata
 spring.data.mongodb.host=database
-sector-urls=localhost:8080/data/json,localhost:8078/data/json
+sector-urls=http://localhost:8080/data/json,http://localhost:8078/data/json
